@@ -1,5 +1,8 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2011-05-15 patrick     Added vrj::User::setHeadPosProxy().
+                       Submitted by Carsten Neumann.
+                       NEW VERSION: 3.1.4
 2011-03-19 patrick     Added support for Boost.Filesystem v3.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 3.1.3
